--- a/public/css/global.css
+++ b/public/css/global.css
@@ -73,7 +73,7 @@ a {
 }
 
 .__hero {
-    padding: 80px 0px;
+    padding: 60px 0px;
 }
 
 .__heroName {
@@ -98,7 +98,7 @@ a {
 }
 
 .__experience {
-    padding: 50px 0px;
+    padding: 60px 0px;
     border-radius: 15px;
     background: #1A202C;
 }
@@ -162,7 +162,7 @@ a {
 }
 
 .__testimonial {
-    padding: 50px 0px;
+    padding: 60px 0px;
 }
 
 .__testimonial h3,
@@ -209,7 +209,7 @@ a {
 }
 
 .__packages {
-    padding: 50px 0px 80px;
+    padding: 60px 0px 80px;
 }
 
 .__pacakgesColumn {
@@ -297,7 +297,7 @@ a {
 
 
 .__30_hero {
-    padding: 80px 0px;
+    padding: 60px 0px;
 }
 
 .__30_hero .__heroName {
@@ -325,7 +325,7 @@ a {
 
 
 .__consultation {
-    padding:70px 0px;
+    padding:60px 0px;
 }
 .__consultation h2{
     font-size:42px;
@@ -340,6 +340,7 @@ a {
 .__consultation ul li{
     font-size:18px;
     line-height:1.3;
+    font-weight: 500;
     margin-bottom:10px;
     align-items: center;
 }
@@ -370,7 +371,7 @@ ol, ul {
 }
 
 .__guaranty {
-    padding: 50px 0px;
+    padding: 60px 0px;
 }
 
 .__guaranty h3{
@@ -394,11 +395,14 @@ ol, ul {
 /* Accordion CSS */
 .__faqs {
     transition: 0.3s;
-    padding: 70px 0px;
+    padding: 60px 0px;
   }
-
+.__faqsInner{
+    box-shadow: 0px 0px 4px 0px #00000040;
+    border-radius: 15px;
+}
   .__faqs input:invalid {
-    border: solid 1px red;
+    border:1px solid red;
     & + span{
     opacity: 1;
     transform: translatex(0px);
@@ -407,17 +411,22 @@ ol, ul {
   }
 
   .__faqs input:valid {
-    border: solid 1px 
-    #36CA80;
+    border: solid 1px #36CA80;
   }
-
+  .__faqs h4{
+    font-size: 18px;
+    line-height: 1.3;
+    font-weight: 600;
+  }
   .__faqs p {
     max-height: 0;
     overflow: hidden;
     padding-top: 20px;
+    font-size: 16px;
+    line-height: 1.3;
   }
 
-  .__faqs .open {
+   .open {
     p {
       max-height: 1000px;
     }
