--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -3,7 +3,15 @@
 }
 
 @media (max-width: 767.98px) {
-
+    .__embla__slide {
+        flex: 0 0 100% !important;
+    }
+    .bg-red {
+        display: block !important;
+    }
+    .__30_hero .__heroName::before {
+        display: none !important;
+    }
   }
 
 @media (max-width: 991.98px) { 
@@ -40,6 +48,77 @@
         font-size: 18px;
         line-height: 1.3;
     }
+    .__embla__slide {
+        flex: 0 0 50%;
+    }
+    .__steps {
+        padding: 50px 0px;
+    }
+    .__steps{
+        text-align: center;
+    }
+    .__steps span {
+        font-size: 18px;
+    }
+    .__steps h3 {
+        font-size: 35px;
+    }
+    .__guaranty{
+        text-align: center;
+    }
+    .__guaranty h3 {
+        font-size: 35px;
+        margin: 20px 0px;
+    }
+    .__faqs{
+        padding: 40px 0px;
+    }
+    .__faqs h3 {
+        text-align: center;
+        font-size: 35px;
+        margin: 20px 0px;
+    }    
+    .__faqs h4 {
+        font-size: 16px;
+    }
+    .__30_hero{
+        text-align: center;
+    }
+    .__30_hero .__heading{
+        font-size: 35px;
+        line-height: 1.3;
+        margin: 20px 0;
+    }
+    .__30_hero .__heroName {
+        position: relative;
+        width: 90%;
+        margin-right: auto;
+    }
+    .__30_hero .__heroName::before {
+        position: absolute;
+        width: 2px;
+        height: 100%;
+        left: 50%;
+        background: var(--red);
+        content: '';
+        display: block;
+    }
+    .__consultation {
+        padding:50px 0px;
+    }
+    .__consultation h2{
+        font-size:35px;
+    }
+    .__consultation h3{
+        font-size:18px;
+    }
+    .__consultation ul li{
+        font-size:16px;
+    }
+    .__testimonial h3, .__packages h3 {
+        font-size: 35px;
+        text-align: center;
+    }
  }
 
 @media (max-width: 1199.98px) { 
@@ -62,6 +141,9 @@
     }
     .__news p{
         font-size: 16px;
+    }
+    .__embla__slide {
+        flex: 0 0 40%;
     }
  }
 
