--- a/public/css/global.css
+++ b/public/css/global.css
@@ -162,7 +162,7 @@ a {
 }
 
 .__testimonial {
-    padding: 60px 0px;
+    padding: 20px 0px;
 }
 
 .__testimonial h3,
@@ -173,21 +173,25 @@ a {
 }
 
 
-.__embla {
+.embla {
+    max-width: 100%;
+    margin: auto;
+    --slide-height: 19rem;
+    --slide-spacing: 1rem;
+    --slide-size: 25%;
     overflow: hidden;
-}
-
-.__embla__container {
+  }
+  .embla__container {
     display: flex;
-}
-
-.__embla__slide {
-    flex: 0 0 27%;
+    align-items: end;
+  }
+  .embla__slide {
+    transform: translate3d(0, 0, 0);
+    flex: 0 0 var(--slide-size);
     min-width: 0;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
+    padding-left: var(--slide-spacing);
+  }
+ 
 
 .__customSlides {
     padding: 30px 20px 30px 25px;
@@ -454,9 +458,54 @@ ol, ul {
   }
 
 /* Accordion CSS */
+.__guaranty strong{
+    color:var(--red)
+}
+.__extensiveContent .__heading {
+    font-size:35px;
+    font-weight:600;
+    line-height:1.3;
+}
+.__extensiveContent p{
+    font-size: 16px;
+    line-height:1.3;
+}
+
+.__InnerAddtionalPrice {
+    text-align:center;
+    color: var(--red);
+    font-weight:600;
+    min-width: 160px;
+    margin-left: 30px;
+}
+.__InnerAddtionalPrice h3{
+    color: var(--red);
+    font-size:16px;
+}
+.__limitedTime {
+    background: #E4202D1A;
+    padding:5px;
+    border-radius:50px;
+    max-height:30px;
+}
+.__limitedTime p{
+    color: var(--red);
+    font-weight:500;
+}
+
 
 .__footer {
     margin-top: 20px;
     background: #1A202C;
     color: rgba(255, 255, 255, 0.7);
+}
+.__footerInner{
+    padding: 20px 0;
+    border-bottom: 1px solid #FFFFFF80;
+}
+.__copyright h4{
+    font-size: 18px;
+    line-height: 27px;
+    padding: 20px 0;
+    color: #FFFFFFB2;
 }
